argo-events-new/github-analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-obs411-argocd
    kubernetes.io/ingress.class: nginx
  name: github-analytics-ingress
spec:
  rules:
  - host: github-analytics.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: github-analytics-eventsource-svc
            port:
              number: 12000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - github-analytics.aoa.oes.opsmx.org
    secretName: github-github-analytics-tls-certificate
