argo-events-new/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-obs411-argocd
    kubernetes.io/ingress.class: nginx
  name: webhook-ingress
  namespace: argo-events
spec:
  rules:
  - host: webhook.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - webhook.aoa.oes.opsmx.org
    secretName: webhook-tls-certificate
